appId: host.exp.Exponent
name: Card happy path
---
- launchApp
- extendedWaitUntil:
    visible:
      id: checkout-screen
    timeout: 30000
- tapOn:
    id: input-card-number
- inputText: "4242424242424242"
- tapOn:
    id: input-card-expiry
- inputText: "1228"
- tapOn:
    id: input-card-cvc
- inputText: "123"
- tapOn:
    id: card-submit
- extendedWaitUntil:
    visible:
      id: payment-status-title
    timeout: 15000
- assertVisible: "Order confirmed"
